--- a/amazonbot/templates/home.html
+++ b/amazonbot/templates/home.html
@@ -61,7 +61,7 @@
                         <div class="card-body">
                             <h3 class="card-title">No products currently available</h3>
                             <div style="text-align: center">
-                                <img src="https://lh3.googleusercontent.com/proxy/XMtwZGkt_JGZu7m2nfpxAZ7fYiC__ssBQsqon96T-7qzE-xmL7kw8pSbokxO4RqjE63iQkjF6MdgqCqWct4WuiDpntLAspCmwRPMlyjID_1I-bhO" width="40%" height="40%">
+                                <img src="https://media.istockphoto.com/vectors/funny-stickman-with-confused-facial-expression-working-on-laptop-vector-id961567192?k=6&m=961567192&s=612x612&w=0&h=HnS5qYrinxFSd5jdYN5tAT7mLb-H85Vok17T4dFAmKY=" width="40%" height="40%">
                             </div>
                         </div>
                     </div>
