--- a/amazonbot/templates/home.html
+++ b/amazonbot/templates/home.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon Availability Checker</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
                 <form class="mt-5" method="POST" action="">
                     {{ form.hidden_tag() }}
                     <fieldset class="form-group">
-                        <legend class="border-bottom mb-4">Check an Amazon Product's Availability</legend>
+                        <legend class="border-bottom mb-4">Search for Available Amazon Products</legend>
                         <div class="form-group">
                             {{ form.search.label(class='form-control-label') }}
                             {% if form.search.errors %}
