--- a/amazonbot/templates/home.html
+++ b/amazonbot/templates/home.html
@@ -16,8 +16,8 @@
                     <h1 class="display-4">AmazonRescue</h1>
                     <p class="lead">Finding products you can buy today.</p>
                 </div>
-                <div class="col">
-                    <img src="https://res.cloudinary.com/di20cx7mf/image/upload/v1587844310/b7602058b9897edb33f7545db2c81b87_cardboard-box-tra_xtfqij.png" width="40%" height="100%">
+                <div class="col-3">
+                    <img src="https://res.cloudinary.com/di20cx7mf/image/upload/v1587844310/b7602058b9897edb33f7545db2c81b87_cardboard-box-tra_xtfqij.png" class="img-fluid">
                 </div>
             </div>
         </div>
