--- a/amazonbot/templates/home.html
+++ b/amazonbot/templates/home.html
@@ -12,12 +12,12 @@
     <div class="jumbotron">
         <div class="container">
             <div class="row">
-                <div class="col-5">
+                <div class="col-sm-4">
                     <h1 class="display-4">AmazonRescue</h1>
                     <p class="lead">Finding products you can buy today.</p>
                 </div>
-                <div class="col-3">
-                    <img src="https://res.cloudinary.com/di20cx7mf/image/upload/v1587844310/b7602058b9897edb33f7545db2c81b87_cardboard-box-tra_xtfqij.png" class="img-fluid">
+                <div class="col-sm">
+                    <img src="https://res.cloudinary.com/di20cx7mf/image/upload/v1587844310/b7602058b9897edb33f7545db2c81b87_cardboard-box-tra_xtfqij.png" class="img-fluid" width="30%">
                 </div>
             </div>
         </div>
