--- a/amazonbot/static/main.css
+++ b/amazonbot/static/main.css
@@ -6,3 +6,8 @@
 input[type=search]::-webkit-search-cancel-button {
     -webkit-appearance: searchfield-cancel-button;
 }
+
+.jumbotron {
+  background-image: url("https://lh3.googleusercontent.com/proxy/lgW2caPPmm4-yWJBIOa8OVeAzV8tGlIyzUmx5aKltMWDwJWGSum-NLbj33_uXLIghuvWCgauRTQRaRqGZW2dMKz2XOG-SfWy4x9-StvQ7Lmbggm1Kms6E_KuimM");
+  background-size: cover;
+}
