--- a/amazonbot/static/main.css
+++ b/amazonbot/static/main.css
@@ -8,6 +8,6 @@ input[type=search]::-webkit-search-cancel-button {
 }
 
 .jumbotron {
-  background-image: url("https://lh3.googleusercontent.com/proxy/lgW2caPPmm4-yWJBIOa8OVeAzV8tGlIyzUmx5aKltMWDwJWGSum-NLbj33_uXLIghuvWCgauRTQRaRqGZW2dMKz2XOG-SfWy4x9-StvQ7Lmbggm1Kms6E_KuimM");
+  background-image: url("https://res.cloudinary.com/di20cx7mf/image/upload/v1587859965/jumbotron_1_yuqtr3.jpg");
   background-size: cover;
 }
