--- a/amazonbot/templates/home.html
+++ b/amazonbot/templates/home.html
@@ -16,9 +16,6 @@
                     <h1 class="display-4">AmazonRescue</h1>
                     <p class="lead">Finding products you can buy today.</p>
                 </div>
-                <div class="col-sm">
-                    <img src="https://res.cloudinary.com/di20cx7mf/image/upload/v1587844310/b7602058b9897edb33f7545db2c81b87_cardboard-box-tra_xtfqij.png" class="img-fluid" width="30%">
-                </div>
             </div>
         </div>
     </div>
@@ -61,6 +58,9 @@
                                         <div class="row">
                                             <div class="col">
                                                 {{ product['title'] }}
+                                            </div>
+                                            <div class="col" style="text-align: center">
+                                                <img style="height: 60%; width: 60%;" src="{{ product['picture'] }}">
                                             </div>
                                             <div class="col">
                                                 <a href="{{ product['link'] }}" target="_blank" class="btn btn-sm btn-primary" style="float: right">Open</a>
