--- a/amazonbot/templates/home.html
+++ b/amazonbot/templates/home.html
@@ -60,7 +60,7 @@
                                                 {{ product['title'] }}
                                             </div>
                                             <div class="col" style="text-align: center">
-                                                <img style="height: 60%; width: 60%;" src="{{ product['picture'] }}">
+                                                <img class="img-responsive" style="height: 60%; width: 60%;" src="{{ product['picture'] }}">
                                             </div>
                                             <div class="col">
                                                 <a href="{{ product['link'] }}" target="_blank" class="btn btn-sm btn-primary" style="float: right">Open</a>
