--- a/amazonbot/templates/home.html
+++ b/amazonbot/templates/home.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="https://res.cloudinary.com/di20cx7mf/image/upload/v1587844935/b7602058b9897edb33f7545db2c81b87_cardboard-box-tra_1_x6ams8.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amazon Availability Checker</title>
+    <title>AmazonRescue</title>
 </head>
 <body>
     <div class="jumbotron">
